# worldquant-101-formulaic-alphas

./: .gitignore  factor_engine.py  get_data.py  main.ipynb  main.py  operators.py  pyproject.toml
data/: SPX as of Mar 14 20261.xlsx
