[project]
name = "worldquant-101-formulaic-alphas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "yfinance>=1.2.0",
]
